--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1332,12 +1332,13 @@ if(MSVC)
     # https://social.msdn.microsoft.com/Forums/vstudio/en-US/5c102025-c254-4f02-9a51-c775c6cc9f4b/problem-with-ltcg-when-building-a-static-library-in-vs2005?forum=vcgeneral
     #
     # For this reason, enable only when building a "Release" (e.g. non-DEBUG) DLL.
-    if(NOT ${CMAKE_BUILD_TYPE} MATCHES "Debug")
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GL")
-      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LTCG")
-      set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /LTCG")
-      set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /LTCG")
-    endif()
+    # michael@thx.com: Disable /GL and /LTCG in all instances for THX code.
+    #if(NOT ${CMAKE_BUILD_TYPE} MATCHES "Debug")
+    #  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GL")
+    #  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LTCG")
+    #  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /LTCG")
+    #  set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /LTCG")
+    #endif()
 
     add_library(libzmq SHARED ${sources} ${public_headers} ${html-docs} ${readme-docs}
                               ${CMAKE_CURRENT_BINARY_DIR}/NSIS.template.in ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
